# autodub

./: .editorconfig  .gitignore  .pre-commit-config.yaml  GEMINI.md  README.md  configure_repo.sh  package-lock.json  package.json  pyproject.toml  run_tests.sh
.github/workflows/: ci.yml
Pyodide/: index.html  script.js  style.css
docs/: roadmap.md
pages/: index.js
pyodide/: index.html  script.js  style.css
src/autodub/: __init__.py  main.py  pipeline.py  pipeline_manual.py
src/autodub/adapters/: embedding_extractor.py  real_ffmpeg_wrapper.py  translator_adapter.py  tts_adapter.py  whisper_asr.py  whisper_asr_adapter.py
src/autodub/adapters/mocks/: __init__.py  ffmpeg_wrapper.py  mock_alignment.py  mock_asr.py  mock_embedding.py  mock_translator.py  mock_tts.py
src/autodub/implementations/mocks/: __init__.py  mock_asr.py  mock_tts.py  mock_vocoder.py
src/autodub/interfaces/: alignment_interface.py  asr_interface.py  embedding_interface.py  translator_interface.py  tts_interface.py
src/autodub/utils/: text_processing.py
tests/unit/: test_embedding_extractor.py  test_ffmpeg_wrapper.py  test_interfaces.py  test_mock_alignment.py  test_mock_asr.py  test_mock_embedding.py  test_mock_tts.py  test_mock_vocoder.py  test_mocks_package.py  test_pipeline.py  test_sanidade.py  test_text_processing.py  test_whisper_asr.py  teste_sanidade.py
